Chore: Upgrade rubocop config to latest version

--- a/.rubocop_core.yml
+++ b/.rubocop_core.yml
@@ -1,5 +1,4 @@
 AllCops:
-  Enabled:      true
   Include:
     - '**/Thorfile'
     - '**/thor.gemspec'
@@ -63,6 +62,7 @@ Style/ClassCheck:
   EnforcedStyle:                 'is_a?'
 
 Style/CollectionMethods:
+  Enabled:                       true
   PreferredMethods:
     collect:                     'map'
     collect!:                    'map!'
@@ -86,7 +86,6 @@ Style/DotPosition:
 
 Style/ElseAlignment:
   Enabled:                       true
-  AlignWith:                     'keyword'
 
 Style/EmptyLineBetweenDefs:
   AllowAdjacentOneLineDefs:      true
@@ -241,6 +240,9 @@ Style/StringLiterals:
   Exclude:
     - '**/config/application.rb'
     - '**/config/environments/**/*'
+
+Style/SymbolArray:
+  Enabled: true
 
 Style/SymbolProc:
   IgnoredMethods:
