Style: Rubocop fixes
--------------------------------------------------------------------------------
Branch:        refactor/massive-update
Signed-off-by: Jeff Felchner <accounts+git@thekompanee.com>

--- a/.rubocop_core.yml
+++ b/.rubocop_core.yml
@@ -147,6 +147,8 @@ Style/MultilineBlockChain:
 
 Style/MultilineOperationIndentation:
   EnforcedStyle:                 'aligned'
+  Exclude:
+    - 'spec/**/*_spec.rb'
 
 Style/Next:
   EnforcedStyle:                 'skip_modifier_ifs'
