Chore: Upgrade rubocop config to latest version

--- a/.rubocop_core.yml
+++ b/.rubocop_core.yml
@@ -20,45 +20,57 @@ AllCops:
     - '**/vendor/**/*'
     - 'bin/rails'
 
+  DisplayCopNames:               true
+
 ################################################################################
 #                                  STYLE
 ################################################################################
 
 Style/AccessModifierIndentation:
+  Enabled:                       true
   EnforcedStyle:                 'indent'
 
 Style/AlignArray:
   Enabled:                       true
 
 Style/AlignHash:
+  Enabled:                       true
   EnforcedHashRocketStyle:       'table'
   EnforcedColonStyle:            'table'
   EnforcedLastArgumentHashStyle: 'always_inspect'
 
 Style/AlignParameters:
+  Enabled:                       true
   EnforcedStyle:                 'with_first_parameter'
 
 Style/AndOr:
+  Enabled:                       true
   EnforcedStyle:                 'always'
 
 Style/BarePercentLiterals:
+  Enabled:                       true
   EnforcedStyle:                 'percent_q'
 
 Style/Blocks:
+  Enabled:                       true
   Exclude:
     - 'app/controllers/**/*.rb'
 
 Style/BracesAroundHashParameters:
-  EnforcedStyle:                 'no_braces'
+  Enabled:                       true
+  EnforcedStyle:                 'context_dependent'
 
 Style/CaseIndentation:
+  Enabled:                       true
   IndentWhenRelativeTo:          'end'
   IndentOneStep:                 false
 
 Style/ClassAndModuleChildren:
+  Enabled:                       true
   EnforcedStyle:                 'nested'
 
 Style/ClassCheck:
+  Enabled:                       true
   EnforcedStyle:                 'is_a?'
 
 Style/CollectionMethods:
@@ -71,6 +83,7 @@ Style/CollectionMethods:
     find_all:                    'select'
 
 Style/CommentAnnotation:
+  Enabled:                       true
   Keywords:
     - 'TODO'
     - 'FIXME'
@@ -82,18 +95,36 @@ Style/Documentation:
   Enabled:                       false
 
 Style/DotPosition:
+  Enabled:                       true
   EnforcedStyle:                 'trailing'
 
 Style/ElseAlignment:
   Enabled:                       true
 
+Style/EmptyElse:
+  Enabled:                       true
+
+Style/EmptyLiteral:
+  Enabled:                       true
+
+Style/EmptyLinesAroundBlockBody:
+  Enabled:                       true
+  EnforcedStyle:                 'no_empty_lines'
+  Exclude:
+    - 'spec/**/*.rb'
+
 Style/EmptyLineBetweenDefs:
+  Enabled:                       true
   AllowAdjacentOneLineDefs:      true
 
 Style/Encoding:
   Enabled:                       false
 
+Style/ExtraSpacing:
+  Enabled:                       false
+
 Style/FileName:
+  Enabled:                       true
   Exclude:
     - '**/Rakefile'
     - '**/Gemfile'
@@ -102,28 +133,38 @@ Style/FileName:
     - '**/Podfile'
     - '**/Thorfile'
 
+Style/FirstParameterIndentation:
+  Enabled:                       false
+
 Style/For:
+  Enabled:                       true
   EnforcedStyle:                 'each'
 
 Style/FormatString:
+  Enabled:                       true
   EnforcedStyle:                 'percent'
 
 Style/GlobalVars:
+  Enabled:                       true
   AllowedVariables:              []
 
 Style/GuardClause:
+  Enabled:                       true
   MinBodyLength:                 1
 
 Style/HashSyntax:
+  Enabled:                       true
   EnforcedStyle:                 'ruby19'
 
 Style/IfUnlessModifier:
+  Enabled:                       true
   MaxLineLength:                 90
 
 Style/IndentArray:
   Enabled:                       true
 
 Style/IndentHash:
+  Enabled:                       true
   EnforcedStyle:                 'special_inside_parentheses'
 
 Style/IndentationConsistency:
@@ -133,37 +174,44 @@ Style/InfiniteLoop:
   Enabled:                       true
 
 Style/LambdaCall:
+  Enabled:                       true
   EnforcedStyle:                 'call'
 
 Style/MethodDefParentheses:
+  Enabled:                       true
   EnforcedStyle:                 'require_parentheses'
 
 Style/MethodName:
+  Enabled:                       true
   EnforcedStyle:                 'snake_case'
 
 Style/MultilineBlockChain:
+  Enabled:                       true
   Exclude:
     - '**/spec/**/*_spec.rb'
 
 Style/MultilineOperationIndentation:
-  EnforcedStyle:                 'aligned'
-  Exclude:
-    - 'spec/**/*_spec.rb'
+  Enabled:                       false
 
 Style/Next:
+  Enabled:                       true
   EnforcedStyle:                 'skip_modifier_ifs'
   MinBodyLength:                 3
 
 Style/NonNilCheck:
+  Enabled:                       true
   IncludeSemanticChanges:        false
 
 Style/NumericLiterals:
+  Enabled:                       true
   MinDigits:                     5
 
 Style/ParenthesesAroundCondition:
+  Enabled:                       true
   AllowSafeAssignment:           true
 
 Style/PercentLiteralDelimiters:
+  Enabled:                       true
   PreferredDelimiters:
     '%':                         '{}'
     '%i':                        '{}'
@@ -176,9 +224,11 @@ Style/PercentLiteralDelimiters:
     '%x':                        '{}'
 
 Style/PercentQLiterals:
+  Enabled:                       true
   EnforcedStyle:                 'upper_case_q'
 
 Style/PredicateName:
+  Enabled:                       true
   NamePrefix:
     - 'is_'
     - 'was_'
@@ -193,18 +243,23 @@ Style/RaiseArgs:
   Enabled:                       false
 
 Style/RedundantReturn:
+  Enabled:                       true
   AllowMultipleReturnValues:     true
 
 Style/RegexpLiteral:
+  Enabled:                       true
   MaxSlashes:                    0
 
 Style/Semicolon:
+  Enabled:                       true
   AllowAsExpressionSeparator:    false
 
 Style/SignalException:
+  Enabled:                       true
   EnforcedStyle:                 'semantic'
 
 Style/SingleLineBlockParams:
+  Enabled:                       true
   Methods:
     - reduce:
         - 'a'
@@ -214,23 +269,32 @@ Style/SingleLineBlockParams:
         - 'e'
 
 Style/SingleLineMethods:
+  Enabled:                       true
   AllowIfMethodIsEmpty:          true
 
 Style/SingleSpaceBeforeFirstArg:
   Enabled:                       false
 
+Style/SpaceAroundBlockParameters:
+  Enabled:                       true
+  EnforcedStyleInsidePipes:      'no_space'
+
 Style/SpaceAroundEqualsInParameterDefault:
+  Enabled:                       true
   EnforcedStyle:                 'space'
 
 Style/SpaceBeforeBlockBraces:
+  Enabled:                       true
   EnforcedStyle:                 'space'
 
 Style/SpaceInsideBlockBraces:
+  Enabled:                       true
   EnforcedStyle:                 'space'
   EnforcedStyleForEmptyBraces:   'no_space'
   SpaceBeforeBlockParameters:    true
 
 Style/SpaceInsideHashLiteralBraces:
+  Enabled:                       true
   EnforcedStyle:                 'space'
   EnforcedStyleForEmptyBraces:   'no_space'
 
@@ -238,55 +302,73 @@ Style/SpaceInsideRangeLiteral:
   Enabled:                       true
 
 Style/StringLiterals:
+  Enabled:                       true
   EnforcedStyle:                 'single_quotes'
   Exclude:
     - '**/config/application.rb'
     - '**/config/environments/**/*'
 
+Style/StructInheritance:
+  Enabled:                       true
+
 Style/SymbolArray:
-  Enabled: true
+  Enabled:                       true
 
 Style/SymbolProc:
+  Enabled:                       true
   IgnoredMethods:
     - 'respond_to'
 
 Style/TrailingBlankLines:
+  Enabled:                       true
   EnforcedStyle:                 'final_newline'
 
 Style/TrailingComma:
+  Enabled:                       true
   EnforcedStyleForMultiline:     'comma'
 
 Style/TrivialAccessors:
   Enabled:                       true
 
 Style/VariableName:
+  Enabled:                       true
   EnforcedStyle:                 'snake_case'
 
 Style/WhileUntilModifier:
+  Enabled:                       true
   MaxLineLength:                 90
 
 Style/WordArray:
+  Enabled:                       true
   MinSize:                       0
 
 ################################################################################
 #                                 METRICS
 ################################################################################
 
+Metrics/AbcSize:
+  Enabled:                       true
+  Max:                           25.0
+
 Metrics/BlockNesting:
-  Max:              3
+  Enabled:                       true
+  Max:                           3
 
 Metrics/ClassLength:
-  CountComments:    false
-  Max:              200
+  Enabled:                       true
+  CountComments:                 false
+  Max:                           200
   Exclude:
     - 'spec/**/*_spec.rb'
 
 Metrics/CyclomaticComplexity:
-  Max:              6
+  Enabled:                       true
+  Max:                           6
 
 Metrics/LineLength:
-  Max:              90
-  AllowURI:         true
+  Enabled:                       true
+  Max:                           90
+  AllowURI:                      true
   Exclude:
     - '**/Gemfile'
     - '**/config/routes.rb'
@@ -294,32 +376,42 @@ Metrics/LineLength:
     - '**/config/environments/**/*'
 
 Metrics/MethodLength:
-  CountComments:    false
-  Max:              30
+  Enabled:                       true
+  CountComments:                 false
+  Max:                           30
 
 Metrics/ParameterLists:
-  Max:              5
-  CountKeywordArgs: true
+  Enabled:                       true
+  Max:                           5
+  CountKeywordArgs:              true
 
 Metrics/PerceivedComplexity:
-  Max:              7
+  Enabled:                       true
+  Max:                           7
 
 ################################################################################
 #                                   LINTS
 ################################################################################
 
 Lint/AssignmentInCondition:
-  AllowSafeAssignment: true
+  Enabled:                       true
+  AllowSafeAssignment:           true
 
 Lint/BlockAlignment:
+  Enabled:                       true
   Exclude:
     - 'app/controllers/**/*.rb'
 
 Lint/DefEndAlignment:
-  AlignWith:           'start_of_line'
+  Enabled:                       true
+  AlignWith:                     'start_of_line'
+
+Lint/DuplicateMethods:
+  Enabled:                       true
 
 Lint/EndAlignment:
-  AlignWith:           'keyword'
+  Enabled:                       true
+  AlignWith:                     'keyword'
 
 Lint/SpaceBeforeFirstArg:
-  Enabled:             true
+  Enabled:                       true
