--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,9 @@ Style/FileName:
   Exclude:
     - 'lib/ruby-progressbar.rb'
 
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
 Style/HashSyntax:
   EnforcedStyle: hash_rockets
 
@@ -17,6 +20,9 @@ Style/IndentationWidth:
   Enabled: false
 
 Style/Lambda:
+  Enabled: false
+
+Style/NumericPredicate:
   Enabled: false
 
 Style/OptionHash:
