Enumerator#to_progressbar as a refinement
As discussed in #124 and #125.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,6 +28,9 @@ Style/IndentationWidth:
 Style/Lambda:
   Enabled: false
 
+Style/MultilineMethodCallIndentation:
+  Enabled: false
+
 Style/NumericPredicate:
   Enabled: false
 
