Tests: Move a bunch of format tests into the Formatter
------------------------------------------------------------------------
Change-Id:     Ide2ebdc5921ce049df1dc2848baca9de0599a14b

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,9 @@ inherit_from:
 
 # Put your project-specifc Rubocop config here
 
+Style/ClosingParenthesisIndentation:
+  Enabled: false
+
 Style/ExtraSpacing:
   Enabled: false
 
